--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -45,5 +45,6 @@
   "resultsPage1Title": "We found you a match!",
   "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
   "resultsShortAppName": "Palumba",
-  "resultsLabelEmoji":"😍❤️‍🔥💘"
+  "resultsLabelEmoji": "😍❤️‍🔥💘",
+  "resultsShare": "Share"
 }
