--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -47,6 +47,9 @@
   "resultsShortAppName": "Palumba",
   "resultsLabelEmoji": "😍❤️‍🔥💘",
   "resultsShare": "Share",
+  "resultsPage2Title": "and you, it’s really a Love Story (EU’s Version)",
+  "resultsPage2FirstText": "You both agreed on ",
+  "resultsPage2LastText": "of all the statements you swiped on.",
   "resultsPage3Title": "Your compatibility with the European Parliament Groups",
   "resultsPage4Title": "Okay, it’s cool knowing which group gets you...",
   "resultsPage4Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
