--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -45,7 +45,7 @@
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Your personalised results are on their way :)",
   "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
-  "loadingResultsPageTitle3": "Finding matches with candidates lists in %Country%  🔍",
+  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
   "loadingResultsPageTitle4": "Almost ready,\none last check...",
   "loadingResultsPageTitle5": "Almost ready,\none last check...",
 
