--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -62,8 +62,9 @@
   "resultsPage4Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
   "resultsPage5Title": "But at the EU Elections, you vote for a local list",
   "resultsPage5Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
-  "resultsPage6Title": "These are the Local Candidate lists in your country most compatible with XXX",
-  "resultsPage6Disclaimer": "Disclaimer about the order of the lists",
+  "resultsPage6Title": "These are the matching Local Candidate lists in your country ",
+  "resultsPage6Disclaimer": "Disclaimer about the order of the lists / temp. localization",
+  "resultsPage6NoLocalCandidates": "No local parties found in {country}",
   "resultsPage7Title": "Would you like to receive a notification when it’s time to vote?",
   "resultsPage7NopButton": "I'm all good!",
   "resultsPage7YesButton": "Yesssss",
