--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -64,6 +64,7 @@
   "resultsPage4TitleBottom": "Anti-EU Integration",
   "resultsPage4TitleLeft": "Left",
   "resultsPage4TitleRight": "Right",
+  "resultsPage4TitleUserHere": "It’s you, hi!",
   "resultsPage6Title": "But at the EU Elections, you vote for a local list",
   "resultsPage6Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
   "resultsPage7Title": "These are the matching Local Candidate lists in your country ",
