--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -77,6 +77,7 @@
 
   "@HomePage": "HomePage",
   "homePageTitle": "If this cute pigeon can’t helpyou vote in June, nothing will.",
-  "homePageBackToResults": "My results · Back to the test",
+  "homePageMyResults": "My results",
+  "homePageBackToTest": "Back to the test",
   "homePageStartButton": "Start a new test"
 }
