--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -80,6 +80,7 @@
   "homePageText": "If this cute pigeon can’t help you vote in June, nothing will.",
   "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
   "homePageBackToTest": "Back to the test",
+  "homePageMyResults": "My results",
   "homePageStartButton": "Start a new test",
 
   "@@SettingsPage": "SettingsPage",
