--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -71,7 +71,7 @@
   "resultsPage6Title": "But at the EU Elections, you vote for a local list",
   "resultsPage6Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
   "resultsPage7Title": "These are the matching Local Candidate lists in your country ",
-  "resultsPage7Disclaimer": "Disclaimer about the order of the lists / temp. localization",
+  "resultsPage7Disclaimer": "They are in no particular order",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
   "resultsPage8Title": "Would you like to receive a notification when it’s time to vote?",
   "resultsPage8NopButton": "I'm all good!",
