--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -98,7 +98,7 @@
   "settingsPageSubtitle3": "Academic Partner",
   "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share the app with a friend",
+  "settingsPageShareButtonText": "Share (coming soon ⏳)",
   "settingsPagePrivacyPolicy": "Privacy Policy"
 
 
