Set statements' language

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -12,6 +12,8 @@
   "skip": "Omet",
   "neutral": "Neutral",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Sembla que no tens connexió a internet",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Continuem en català? :)",
   "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
