--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -58,21 +58,24 @@
   "resultsPage2FirstText": "You both agreed on ",
   "resultsPage2LastText": "of all the statements you swiped on.",
   "resultsPage3Title": "Your compatibility with the European Parliament Groups",
-  "resultsPage5Title": "Okay, it’s cool knowing which group gets you...",
-  "resultsPage5Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
   "resultsPage4TitleTop": "Pro-EU Integration",
   "resultsPage4TitleBottom": "Anti-EU Integration",
   "resultsPage4TitleLeft": "Left",
   "resultsPage4TitleRight": "Right",
   "resultsPage4TitleUserHere": "It’s you, hi!",
-  "resultsPage6Title": "But at the EU Elections, you vote for a local list",
-  "resultsPage6Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
+  "resultsPage6_1Title": "Ok,it's cool knowing which group gets me...",
+  "resultsPage6_2Title": "But at the EU Elections, you vote for a local list",
+  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
   "resultsPage7Title": "These are the matching Local Candidate lists in your country ",
   "resultsPage7Disclaimer": "They are in no particular order",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8Title": "Would you like to receive a notification when it’s time to vote?",
-  "resultsPage8NopButton": "I'm all good!",
-  "resultsPage8YesButton": "Yesssss",
+  "resultsPage8Text": "I swiped on {num} topics and I’m in the top {top}% of climate action",
+  "resultsPage9Title": "You earned a badge for being a « Political Explorer ».",
+  "resultsPage9Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
+  "resultsPage1OText": "You seem to be in the top 10% for Climate action!",
+  "resultsPage11Title": "Would you like to receive a notification when it’s time to vote?",
+  "resultsPage11NopButton": "I'm all good!",
+  "resultsPage11YesButton": "Yesssss",
   "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
