--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -63,6 +63,9 @@
   "resultsPage4TitleLeft": "Left",
   "resultsPage4TitleRight": "Right",
   "resultsPage4TitleUserHere": "It’s you, hi!",
+  "resultsPage5Topic1": "Environment",
+  "resultsPage5Topic2": "Humans & Social Rights",
+  "resultsPage5Topic3": "Economic intervention",
   "resultsPage6_1Title": "Ok,it's cool knowing which group gets me...",
   "resultsPage6_2Title": "But at the EU Elections, you vote for a local list",
   "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
