--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -63,6 +63,7 @@
   "resultsPage4TitleLeft": "Left",
   "resultsPage4TitleRight": "Right",
   "resultsPage4TitleUserHere": "It’s you, hi!",
+  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
   "resultsPage5Topic1": "Environment",
   "resultsPage5Topic2": "Humans & Social Rights",
   "resultsPage5Topic3": "Economic intervention",
@@ -73,8 +74,9 @@
   "resultsPage7Disclaimer": "They are in no particular order",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
   "resultsPage8Text": "I swiped on {num} topics and I’m in the top {top}% of climate action",
-  "resultsPage9Title": "You earned a badge for being a « Political Explorer ».",
-  "resultsPage9Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
+  "resultsPage9Help": "Click on the cards to shuffle",
+  "resultsPage9Text1": "Elections are about many topics,but there’s one thing that really",
+  "resultsPage9Text2": "Belongs With Me \uD83E\uDEE1",
   "resultsPage1OText": "You seem to be in the top 10% for Climate action!",
   "resultsPage11Title": "Would you like to receive a notification when it’s time to vote?",
   "resultsPage11NopButton": "I'm all good!",
