--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -70,8 +70,8 @@
   "resultsPage6_1Title": "Ok,it's cool knowing which group gets me...",
   "resultsPage6_2Title": "But at the EU Elections, you vote for a local list",
   "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
-  "resultsPage7Title": "These are the matching Local Candidate lists in your country ",
-  "resultsPage7Disclaimer": "They are in no particular order",
+  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
+  "resultsPage7Disclaimer": "In no particular order.",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
   "resultsPage8Text": "I swiped on {num} topics and I’m in the top {top}% of climate action",
   "resultsPage9Help": "Click on the cards to shuffle",
