Add missing texts

--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_en.arb
@@ -50,14 +50,12 @@
   "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
   "loadingResultsPageTitle4": "Almost ready,\none last check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "We found you a match!",
-  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers  😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Share (coming soon ⏳)",
-  "resultsPage2Title": "and you, it’s really a Love Story (EU’s Version)",
-  "resultsPage2FirstText": "You both agreed on ",
-  "resultsPage2LastText": "of all the statements you swiped on.",
-  "resultsPage3Title": "Your compatibility with the European Parliament Groups",
+  "resultsPage1Title": "A match and much more \uD83D\uDC49\uD83D\uDC48",
+  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
+  "resultsPage1Button": "Press to continue",
+  "resultsPage2_1Title": "Honestly, between the",
+  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "How close I am to European Parliament Groups",
   "resultsPage4TitleTop": "Pro-EU Integration",
   "resultsPage4TitleBottom": "Anti-EU Integration",
   "resultsPage4TitleLeft": "Left",
@@ -73,15 +71,16 @@
   "resultsPage7Title": "The candidates in {country} most aligned with {group}",
   "resultsPage7Disclaimer": "In no particular order.",
   "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8Text": "I swiped on {num} topics and I’m in the top {top}% of climate action",
+  "resultsPage8_1Text": "On Environmental issues, you’re {percentage}% more into",
+  "resultsPage8_2Text": "Active Climate Action \uD83C\uDF31\uD83D\uDE0C",
+  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
   "resultsPage9Help": "Click on the cards to shuffle",
   "resultsPage9Text1": "Elections are about many topics,but there’s one thing that really",
   "resultsPage9Text2": "Belongs With Me \uD83E\uDEE1",
-  "resultsPage1OText": "You seem to be in the top 10% for Climate action!",
-  "resultsPage11Title": "Would you like to receive a notification when it’s time to vote?",
-  "resultsPage11NopButton": "I'm all good!",
-  "resultsPage11YesButton": "Yesssss",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage10Title": "A notification when\nit’s time to go vote?",
+  "resultsPage10NopButton": "No thanks!",
+  "resultsPage10YesButton": "Yesssss",
+  "resultsShare": "Share",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
   "homePageBackToTest": "Back to the test",
@@ -101,6 +100,6 @@
   "settingsPageSubtitle3": "Academic Partner",
   "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share (coming soon ⏳)",
+  "settingsPageShareButtonText": "Share",
   "settingsPagePrivacyPolicy": "Privacy Policy"
 }
